# Aiogram-Template

./: .env.ren  .gitignore  loader.py  main.py  pyproject.toml
app/commands/: __init__.py  admins.py  users.py
app/filters/: __init__.py  status.py
app/handlers/: __init__.py  error.py
app/handlers/admins/: start.py
app/handlers/users/: start.py
app/middlewares/: __init__.py
data/: config.py
