[tool.poetry]
name = "aiogram template"
version = "0.1.0"
description = ""
authors = ["mainoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
environs = "^11.0.0"
redis = "^5.0.8"
loguru = "^0.7.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
